--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "eslintConfig": {
+    "env": {
+      "browser": true
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
