--- a/netlify.toml
+++ b/netlify.toml
@@ -6,3 +6,25 @@
   from = "/*"
   to = "/src/pages/page404/index.html"
   status = 404
+
+# 정적 자산 캐시 (1년)
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+# 보안 헤더
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Cross-Origin-Opener-Policy = "same-origin"
+    Strict-Transport-Security = "max-age=31536000; includeSubDomains"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' https://t1.daumcdn.net; style-src 'self' 'unsafe-inline' https://spoqa.github.io; img-src 'self' data: https:; font-src 'self' https://spoqa.github.io; connect-src 'self' https://api.wenivops.co.kr"
