--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.7.4",
+    "terser": "^5.46.0",
     "vite": "^7.2.4"
   }
 }
