netlify.toml 변경

--- a/netlify.toml
+++ b/netlify.toml
@@ -27,7 +27,8 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     Cross-Origin-Opener-Policy = "same-origin"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' https://t1.daumcdn.net; style-src 'self' 'unsafe-inline' https://spoqa.github.io; img-src 'self' data: https:; font-src 'self' https://spoqa.github.io; connect-src 'self' https://api.wenivops.co.kr"
+
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://t1.daumcdn.net; frame-src 'self' https://*.daum.net https://*.daumcdn.net; style-src 'self' 'unsafe-inline' https://spoqa.github.io; img-src 'self' data: https:; font-src 'self' https://spoqa.github.io; connect-src 'self' https://api.wenivops.co.kr"
 
 [[headers]]
   for = "/"
