--- a/netlify.toml
+++ b/netlify.toml
@@ -28,10 +28,4 @@
     Cross-Origin-Opener-Policy = "same-origin"
     Strict-Transport-Security = "max-age=31536000; includeSubDomains"
 
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://t1.daumcdn.net; frame-src 'self' https://*.daum.net https://*.daumcdn.net; style-src 'self' 'unsafe-inline' https://spoqa.github.io; img-src 'self' data: https:; font-src 'self' https://spoqa.github.io; connect-src 'self' https://api.wenivops.co.kr"
-
-[[headers]]
-  for = "/"
-  [headers.values]
-    Content-Security-Policy = "frame-src 'self' https://.daum.net https://%2A.daumcdn.net/; script-src 'self' 'unsafe-inline' https://%2A.daumcdn.net/;"
-    X-Frame-Options = "ALLOWALL"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://t1.daumcdn.net; frame-src 'self' https://*.daum.net https://*.daumcdn.net; frame-ancestors 'self'; style-src 'self' 'unsafe-inline' https://spoqa.github.io; img-src 'self' data: https:; font-src 'self' https://spoqa.github.io; connect-src 'self' https://api.wenivops.co.kr; object-src 'none'; upgrade-insecure-requests"
